
Version 0.2 (XXXX-XX-XX)

   New: Notes are now editable through the annotations tree view.
   New: It is now possible to delete a sub-region (it was possible using Remove Annotation, but only if there was
        a byte where you could select the sub-region without selecting an annotation.

 Fixed: Adding a 64-bit integer actually added a 16-bit integer of the same kind.
 Fixed: Creating a sub-region caused the end offset to be one less than it should have been.
 Fixed: Filenames with a space were showing %20 for the notebook description.
 Fixed: Overlaps were incorrectly detected when zero-length annotations were present, or when trying to add
        a zero-length annotation, where the zero-length annotation was precisely at the start or end of another
        annotation.